# wheriz

./: .gitignore  CLAUDE.md  MVP-PLAN.md  MVP.md  OPEN-ISSUES.md  README.md  item-finder-project-plan.md  pyproject.toml
src/wwiw/: __init__.py  db.py  main.py
src/wwiw/engine/: __init__.py  learning.py  memory.py  scoring.py  types.py
src/wwiw/llm/: __init__.py  client.py  prompts.py  tasks.py
src/wwiw/llm/prompts/: extract_surfaces.txt  parse_loss_interview.txt  parse_residence.txt  parse_search_query.txt  phrase_reason.txt
src/wwiw/web/: __init__.py  app.py  deps.py  find.py  log.py  onboarding.py  stats.py
src/wwiw/web/templates/: base.html  index.html  log.html  stats.html
src/wwiw/web/templates/find/: done.html  first_pass.html  interview.html  query.html  suggestions.html  where.html
src/wwiw/web/templates/onboarding/: done.html  items.html  items_review.html  photos.html  photos_review.html  rooms.html  rooms_review.html
tests/: test_db.py  test_db_access.py  test_db_findloop.py
tests/engine/: test_learning.py  test_memory.py  test_ranking_improves.py  test_scoring.py  test_types.py
tests/llm/: test_client.py  test_prompts.py  test_tasks.py
tests/web/: conftest.py  test_app.py  test_find_confirm.py  test_find_followup.py  test_find_interview.py  test_find_query.py  test_log.py  test_onboarding_flow.py  test_onboarding_items.py  test_onboarding_photos.py  test_onboarding_rooms.py  test_stats.py
