[project]
name = "wwiw"
version = "0.1.0"
description = "Where-Was-I-When: an ambient item-finding system (Stage 0 — reasoning engine with stubbed sensing)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Starlette's TestClient warns it still uses httpx; not actionable here.
    "ignore:Using .httpx. with .starlette:DeprecationWarning",
]
